add login, get users, api docs
